Add cumulative product scan semantics