@@ -87,7 +87,7 @@ class TensorTest {
         Set<String> publicMethods = declaredPublicMethods.stream()
                 .map(method -> method.getName())
                 .collect(Collectors.toSet());
-        assertEquals(194, declaredPublicMethods.size());
+        assertEquals(196, declaredPublicMethods.size());
         assertEquals(
                 Set.of("id", "descriptor", "label", "hostStorage", "replaceHostStorage",
                         "clearHostStorage", "provenance", "toString", "add", "sub", "mul",
@@ -98,7 +98,7 @@ class TensorTest {
                         "clamp", "clampMin", "clampMax", "greaterThan",
                         "greaterOrEqual", "lessThan", "lessOrEqual", "equalTo", "notEqualTo",
                         "logicalAnd", "logicalOr", "logicalNot", "where", "cast", "sum",
-                        "mean", "prod", "sumToShape", "all", "any", "argMin", "argMax", "cumSum", "softmax", "matmul", "linear",
+                        "mean", "prod", "sumToShape", "all", "any", "argMin", "argMax", "cumSum", "cumProd", "softmax", "matmul", "linear",
                         "scaledDotProductAttention", "conv2d", "maxPool2d", "averagePool2d",
                         "sort", "argsort", "topK",
                         "logSoftmax", "meanSquaredError", "categoricalCrossEntropyWithLogits", "layerNorm", "rmsNorm", "batchNormInference", "batchNormTraining", "logSumExp", "variance", "standardDeviation", "l1Norm",
@@ -323,14 +323,16 @@ class TensorTest {
         for (Class<?>[] parameters : List.of(
                 new Class<?>[] {int.class},
                 new Class<?>[] {int.class, boolean.class, boolean.class})) {
-            var method = Tensor.class.getDeclaredMethod("cumSum", parameters);
-            assertAll(
-                    () -> assertEquals(Tensor.class, method.getReturnType()),
-                    () -> assertEquals(List.of(parameters),
-                            Arrays.asList(method.getParameterTypes())),
-                    () -> assertTrue(Modifier.isPublic(method.getModifiers())),
-                    () -> assertFalse(Modifier.isStatic(method.getModifiers())),
-                    () -> assertFalse(Modifier.isSynchronized(method.getModifiers())));
+            for (String methodName : List.of("cumSum", "cumProd")) {
+                var method = Tensor.class.getDeclaredMethod(methodName, parameters);
+                assertAll(
+                        () -> assertEquals(Tensor.class, method.getReturnType()),
+                        () -> assertEquals(List.of(parameters),
+                                Arrays.asList(method.getParameterTypes())),
+                        () -> assertTrue(Modifier.isPublic(method.getModifiers())),
+                        () -> assertFalse(Modifier.isStatic(method.getModifiers())),
+                        () -> assertFalse(Modifier.isSynchronized(method.getModifiers())));
+            }
         }
 
         var batchNormInference = Tensor.class.getDeclaredMethod(
